Fix internet explorer scrollbar behavior

--- a/src/less/basics/grid.less
+++ b/src/less/basics/grid.less
@@ -23,6 +23,8 @@
   width: 100%;
   flex: 1 1 auto;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: scrollbar;
 
   &-fluid,
   &-fluid--mobile {
